build: update to Angular v16 packages

--- a/packages/create-analog/template-angular-v16-prerelease/package.json
+++ b/packages/create-analog/template-angular-v16-prerelease/package.json
@@ -16,15 +16,15 @@
   "dependencies": {
     "@analogjs/content": "^0.2.0-beta.3",
     "@analogjs/router": "^0.2.0-beta.3",
-    "@angular/animations": "^16.0.0-rc.0",
-    "@angular/common": "^16.0.0-rc.0",
-    "@angular/compiler": "^16.0.0-rc.0",
-    "@angular/core": "^16.0.0-rc.0",
-    "@angular/forms": "^16.0.0-rc.0",
-    "@angular/platform-browser": "^16.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^16.0.0-rc.0",
-    "@angular/platform-server": "^16.0.0-rc.0",
-    "@angular/router": "^16.0.0-rc.0",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/platform-server": "^16.0.0",
+    "@angular/router": "^16.0.0",
     "@nx/angular": "16.0.1",
     "front-matter": "^4.0.2",
     "marked": "^4.2.12",
@@ -35,9 +35,9 @@
   },
   "devDependencies": {
     "@analogjs/platform": "^0.2.0-beta.3",
-    "@angular-devkit/build-angular": "^16.0.0-rc.0",
+    "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0-rc.0",
-    "@angular/compiler-cli": "^16.0.0-rc.0",
+    "@angular/compiler-cli": "^16.0.0",
     "@nx/vite": "16.0.1",
     "nx": "^16.0.1",
     "jsdom": "^20.0.0",
