feat: add trpc client and trpc-app as example
this moves the trpc client from the SPARTAN project into the
analogjs project! I also moved the SPARTAN example into the
analog repository, but without any DB interactions.
Still need to add e2e and unit tests for this. Need to
investigate trpc a little more to understand how to best test
this. However, e2e tests should be a big first step.

--- a/package.json
+++ b/package.json
@@ -48,14 +48,18 @@
     "@angular/router": "^16.0.0",
     "@astrojs/react": "^2.0.2",
     "@nx/angular": "16.0.1",
+    "@trpc/client": "^10.25.0",
+    "@trpc/server": "^10.25.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "ajv-formats": "^2.1.1",
     "front-matter": "^4.0.2",
+    "isomorphic-fetch": "^3.0.0",
     "marked": "^4.2.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rxjs": "7.8.0",
+    "superjson": "^1.12.3",
     "tslib": "^2.4.0",
     "zone.js": "0.13.0"
   },
@@ -73,17 +77,17 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@ngtools/webpack": "^16.0.0",
+    "@nx-plus/docusaurus": "15.0.0-rc.0",
+    "@nx/cypress": "16.0.1",
     "@nx/devkit": "16.0.1",
-    "@nx/workspace": "16.0.1",
+    "@nx/eslint-plugin": "16.0.1",
+    "@nx/jest": "16.0.1",
     "@nx/js": "16.0.1",
     "@nx/linter": "16.0.1",
-    "@nx/cypress": "16.0.1",
-    "@nx/web": "16.0.1",
-    "@nx/eslint-plugin": "16.0.1",
-    "@nx/vite": "16.0.1",
     "@nx/plugin": "16.0.1",
-    "@nx/jest": "16.0.1",
-    "@nx-plus/docusaurus": "15.0.0-rc.0",
+    "@nx/vite": "16.0.1",
+    "@nx/web": "16.0.1",
+    "@nx/workspace": "16.0.1",
     "@schematics/angular": "^16.0.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
@@ -124,6 +128,7 @@
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "start-server-and-test": "^1.15.3",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.3",
