fix: address pr comments. adjust versions to pick up newest and fix imports

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -27,7 +27,7 @@
     "nitropack": "^1.0.0",
     "@analogjs/vite-plugin-angular": "^0.2.0-beta.3",
     "@analogjs/vite-plugin-nitro": "^0.2.0-beta.3",
-    "@nx/devkit": "16.0.1"
+    "@nx/devkit": "^16.0.0"
   },
   "generators": "./src/lib/nx-plugin/generators.json",
   "schematics": "./src/lib/nx-plugin/generators.json"
