--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@astrojs/react": "^2.0.2",
-    "@nx/angular": "16.0.1",
+    "@nx/angular": "16.1.0",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "@types/react": "^18.0.21",
@@ -67,10 +67,10 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular-devkit/core": "^16.0.0",
     "@angular-devkit/schematics": "^16.0.0",
-    "@angular-eslint/eslint-plugin": "15.2.0",
-    "@angular-eslint/eslint-plugin-template": "15.2.0",
-    "@angular-eslint/template-parser": "15.2.0",
-    "@angular/cli": "^16.0.0",
+    "@angular-eslint/eslint-plugin": "16.0.1",
+    "@angular-eslint/eslint-plugin-template": "16.0.1",
+    "@angular-eslint/template-parser": "16.0.1",
+    "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
     "@astrojs/markdown-component": "^1.0.2",
@@ -78,16 +78,12 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@ngtools/webpack": "^16.0.0",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
-    "@nx/cypress": "16.0.1",
-    "@nx/devkit": "16.0.1",
-    "@nx/eslint-plugin": "16.0.1",
-    "@nx/jest": "16.0.1",
-    "@nx/js": "16.0.1",
-    "@nx/linter": "16.0.1",
-    "@nx/plugin": "16.0.1",
-    "@nx/vite": "16.0.1",
-    "@nx/web": "16.0.1",
-    "@nx/workspace": "16.0.1",
+    "@nx/cypress": "16.1.0",
+    "@nx/web": "16.1.0",
+    "@nx/eslint-plugin": "16.1.0",
+    "@nx/vite": "16.1.0",
+    "@nx/plugin": "16.1.0",
+    "@nx/jest": "16.1.0",
     "@schematics/angular": "^16.0.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
@@ -104,7 +100,7 @@
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
-    "cypress": "^12.4.1",
+    "cypress": "12.11.0",
     "eslint": "~8.33.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -117,7 +113,7 @@
     "minimist": "^1.2.7",
     "ng-packagr": "^16.0.0",
     "nitropack": "^1.0.0",
-    "nx": "16.0.1",
+    "nx": "16.1.0",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
@@ -132,10 +128,10 @@
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.3",
-    "vite": "4.3.0",
+    "vite": "4.3.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "4.0.5",
-    "vitest": "0.30.1",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.31.0",
     "webpack-bundle-analyzer": "^4.7.0"
   }
 }
