feat(astro-angular): add support for render and client component providers
Closes #97

--- a/packages/astro-angular/tsconfig.lib.json
+++ b/packages/astro-angular/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "declaration": true,
+    "declaration": false,
     "inlineSourceMap": true,
     "sourceMap": false,
     "types": []
