--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -19,11 +19,10 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
-    "@angular/common": "16.0.0-rc.0",
-    "@angular/core": "16.0.0-rc.0",
+    "@angular/common": "^16.0.0",
+    "@angular/core": "^16.0.0",
     "@trpc/client": "10.25.0",
     "@trpc/server": "10.25.0",
-    "superjson": "^1.12.2",
     "isomorphic-fetch": "^3.0.0"
   },
   "dependencies": {
