--- a/packages/create-analog/template-angular-v16/package.json
+++ b/packages/create-analog/template-angular-v16/package.json
@@ -14,8 +14,8 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@analogjs/content": "^0.2.0-beta.3",
-    "@analogjs/router": "^0.2.0-beta.3",
+    "@analogjs/content": "^0.2.0-beta.4",
+    "@analogjs/router": "^0.2.0-beta.4",
     "@angular/animations": "^16.0.0",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@nx/angular": "16.0.1",
+    "@nx/angular": "^16.0.0",
     "front-matter": "^4.0.2",
     "marked": "^4.2.12",
     "prismjs": "^1.29.0",
@@ -34,12 +34,12 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^0.2.0-beta.3",
+    "@analogjs/platform": "^0.2.0-beta.4",
     "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "~16.0.0-rc.0",
+    "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
-    "@nx/vite": "16.0.1",
-    "nx": "^16.0.1",
+    "@nx/vite": "^16.0.0",
+    "nx": "^16.0.0",
     "jsdom": "^20.0.0",
     "typescript": "~5.0.2",
     "vite": "^4.0.3",
