--- a/packages/create-analog/template-angular-v15/angular.json
+++ b/packages/create-analog/template-angular-v15/angular.json
@@ -10,7 +10,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@nx/vite:build",
+          "builder": "@nrwl/vite:build",
           "options": {
             "configFile": "vite.config.ts",
             "outputPath": "dist/client"
@@ -27,7 +27,7 @@
           }
         },
         "serve": {
-          "builder": "@nx/vite:dev-server",
+          "builder": "@nrwl/vite:dev-server",
           "defaultConfiguration": "development",
           "options": {
             "buildTarget": "my-app:build",
@@ -44,7 +44,7 @@
           }
         },
         "test": {
-          "builder": "@nx/vite:test"
+          "builder": "@nrwl/vite:test"
         }
       }
     }
