--- a/packages/create-analog/template-angular-v15/package.json
+++ b/packages/create-analog/template-angular-v15/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/platform-server": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@nx/angular": "16.0.1",
+    "@nrwl/angular": "^15.0.0",
     "front-matter": "^4.0.2",
     "marked": "^4.2.12",
     "prismjs": "^1.29.0",
@@ -34,12 +34,11 @@
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@analogjs/platform": "0.1.0-beta.22",
-    "@analogjs/vite-plugin-angular": "0.2.0-alpha.29",
+    "@analogjs/platform": "0.1.0-beta.23",
     "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
-    "@nx/vite": "16.0.1",
+    "@nrwl/vite": "^15.0.0",
     "nx": "^15.7.0",
     "jsdom": "^20.0.0",
     "typescript": "~4.8.4",
