--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -43,5 +43,17 @@
     "rxjs": "^7.5.6",
     "zone.js": "^0.13.0",
     "tslib": "^2.4.0"
+  },
+  "ng-update": {
+    "packageGroup": [
+      "@analogjs/astro-angular",
+      "@analogjs/platform",
+      "@analogjs/content",
+      "@analogjs/router",
+      "@analogjs/trpc",
+      "@analogjs/vite-plugin-angular",
+      "@analogjs/vite-plugin-nitro"
+    ],
+    "migrations": "./migrations/migration.json"
   }
 }
