--- a/packages/create-analog/template-angular-v15/angular.json
+++ b/packages/create-analog/template-angular-v15/angular.json
@@ -13,6 +13,7 @@
           "builder": "@nrwl/vite:build",
           "options": {
             "configFile": "vite.config.ts",
+            "main": "src/main.ts",
             "outputPath": "dist/client"
           },
           "defaultConfiguration": "production",
