--- a/packages/astro-angular/project.json
+++ b/packages/astro-angular/project.json
@@ -38,7 +38,7 @@
       }
     },
     "test": {
-      "executor": "@nrwl/vite:test"
+      "executor": "@nx/vite:test"
     },
     "version": {
       "executor": "@jscutlery/semver:version",
