--- a/packages/create-analog/project.json
+++ b/packages/create-analog/project.json
@@ -15,7 +15,7 @@
       }
     },
     "test": {
-      "executor": "@nrwl/vite:test"
+      "executor": "@nx/vite:test"
     },
     "version": {
       "executor": "@jscutlery/semver:version",
