--- a/packages/router/project.json
+++ b/packages/router/project.json
@@ -32,6 +32,13 @@
     },
     "test": {
       "executor": "@nx/vite:test"
+    },
+    "version": {
+      "executor": "@jscutlery/semver:version",
+      "options": {
+        "preset": "conventional",
+        "tagPrefix": "router@"
+      }
     }
   },
   "tags": []
