build: update deps to nitropack 2.4.0, astro 2.4.5

--- a/apps/analog-app-e2e-playwright/project.json
+++ b/apps/analog-app-e2e-playwright/project.json
@@ -11,7 +11,7 @@
       "executor": "nx:run-commands",
       "options": {
         "cwd": "",
-        "command": "start-server-and-test 'nx serve analog-app' 3000 'nx run analog-app-e2e-playwright:vitest'"
+        "command": "start-server-and-test 'nx serve analog-app' http://localhost:3000 'nx run analog-app-e2e-playwright:vitest'"
       }
     },
     "lint": {
