fix(vite-plugin-nitro): use proxy to relay requests without api prefix
there was an issue that when built for production our nitro
server would turn POST requests into GET requests and drop
the body. This issue stems from our middleware using $fetch
to relay the request with the removed /api prefix. By default,
$fetch requests are GET requests and therefore all other
requests are converted. So instead of using $fetch directly, we
use h3's proxyRequest function to take care of the conversion.
We still pass the $fetch.native as our custom fetch implementation
as it takes care of figuring out the base URL for us. To make
sure that we also test this issue I changed the trpc-app's e2e
test to run against the production output. I did the same for the
analog-app-e2e-playwright project.

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -28,54 +28,6 @@
         }
       }
     },
-    "build-ng": {
-      "executor": "@angular-devkit/build-angular:browser",
-      "options": {
-        "outputPath": "dist/apps/analog-app-ng",
-        "index": "apps/analog-app/src/index.html",
-        "main": "apps/analog-app/src/main.ts",
-        "polyfills": "apps/analog-app/src/polyfills.ts",
-        "tsConfig": "apps/analog-app/tsconfig.app.json",
-        "assets": [
-          "apps/analog-app/src/favicon.ico",
-          "apps/analog-app/src/assets"
-        ],
-        "styles": ["apps/analog-app/src/styles.css"],
-        "scripts": []
-      },
-      "configurations": {
-        "production": {
-          "budgets": [
-            {
-              "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
-            },
-            {
-              "type": "anyComponentStyle",
-              "maximumWarning": "2kb",
-              "maximumError": "4kb"
-            }
-          ],
-          "fileReplacements": [
-            {
-              "replace": "apps/analog-app/src/environments/environment.ts",
-              "with": "apps/analog-app/src/environments/environment.prod.ts"
-            }
-          ],
-          "outputHashing": "all"
-        },
-        "development": {
-          "buildOptimizer": false,
-          "optimization": false,
-          "vendorChunk": true,
-          "extractLicenses": false,
-          "sourceMap": true,
-          "namedChunks": true
-        }
-      },
-      "defaultConfiguration": "production"
-    },
     "serve": {
       "executor": "@nx/vite:dev-server",
       "defaultConfiguration": "development",
@@ -93,17 +45,13 @@
         }
       }
     },
-    "serve-ng": {
-      "executor": "@angular-devkit/build-angular:dev-server",
-      "configurations": {
-        "production": {
-          "browserTarget": "analog-app:build-ng:production"
-        },
-        "development": {
-          "browserTarget": "analog-app:build-ng:development"
-        }
+    "serve-nitro": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "",
+        "command": "PORT=3000 node dist/apps/analog-app/analog/server/index.mjs"
       },
-      "defaultConfiguration": "development"
+      "dependsOn": ["build"]
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
