--- a/apps/trpc-app/project.json
+++ b/apps/trpc-app/project.json
@@ -45,6 +45,14 @@
         }
       }
     },
+    "serve-nitro": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "",
+        "command": "PORT=4205 node dist/apps/trpc-app/analog/server/index.mjs"
+      },
+      "dependsOn": ["build"]
+    },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
