--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -4,9 +4,7 @@
   "projectType": "library",
   "sourceRoot": "packages/content/src",
   "prefix": "analogjs",
-  "implicitDependencies": [
-    "vite-plugin-angular"
-  ],
+  "implicitDependencies": ["vite-plugin-angular"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:ng-packagr",
