--- a/packages/vite-plugin-angular/project.json
+++ b/packages/vite-plugin-angular/project.json
@@ -12,7 +12,8 @@
         "main": "packages/vite-plugin-angular/src/index.ts",
         "tsConfig": "packages/vite-plugin-angular/tsconfig.lib.json",
         "assets": [
-          "packages/vite-plugin-angular/*.md"
+          "packages/vite-plugin-angular/*.md",
+          "packages/vite-plugin-angular/migrations/migration.json"
         ],
         "updateBuildableProjectDepsInPackageJson": false
       }
