--- a/packages/astro-angular/tsconfig.lib.json
+++ b/packages/astro-angular/tsconfig.lib.json
@@ -5,7 +5,12 @@
     "declaration": false,
     "inlineSourceMap": true,
     "sourceMap": false,
-    "types": []
+    "types": [],
+    "paths": {
+      "@analogjs/vite-plugin-angular": [
+        "./node_modules/@analogjs/vite-plugin-angular"
+      ]
+    }
   },
   "include": ["**/*.ts"],
   "exclude": [
