--- a/nx.json
+++ b/nx.json
@@ -8,7 +8,7 @@
     "defaultBase": "main"
   },
   "cli": {
-    "packageManager": "yarn"
+    "packageManager": "pnpm"
   },
   "tasksRunnerOptions": {
     "default": {
