--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,17 +36,22 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .node-version
-          cache: yarn
+      - run: corepack enable
+      - run: pnpm --version
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'pnpm'
+          cache-dependency-path: '**/pnpm-lock.yaml'
       - name: Install
-        run: yarn install --frozen-lockfile --non-interactive
+        run: pnpm install --frozen-lockfile --prefer-offline
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Build
-        run: yarn build
+        run: pnpm build
       - name: Test
-        run: yarn test
+        run: pnpm test
       - name: End-to-end test
-        run: yarn e2e
+        run: pnpm e2e
       - name: Upload docs website
         # Runs on merge to the `main` branch
         if: github.event_name == 'push' && github.ref_name == 'main'
