--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,19 +29,20 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - run: corepack enable
+      - run: pnpm --version
       - uses: actions/setup-node@v3
         with:
-          node-version-file: .node-version
-          cache: yarn
-
+          cache: 'pnpm'
+          cache-dependency-path: '**/pnpm-lock.yaml'
       - name: Install
-        run: yarn install --frozen-lockfile --non-interactive
+        run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Test
-        run: yarn nx run ${{ steps.get-tag-name.outputs.result }}:test
+        run: pnpm exec nx run ${{ steps.get-tag-name.outputs.result }}:test
 
       - name: Build
-        run: yarn nx run ${{ steps.get-tag-name.outputs.result }}:build
+        run: pnpm exec nx run ${{ steps.get-tag-name.outputs.result }}:build
 
       - name: Create Release
         uses: ncipollo/release-action@v1
