--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -15,7 +15,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=14.18.0"
+    "node": "^16.14.0 || >=18.10.0"
   },
   "repository": {
     "type": "git",
