--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,19 +3,18 @@ name: publish to NPM
 on:
   push:
     tags:
-      - "astro-angular@*"
-      - "content@*"
-      - "create-analog@*"
-      - "platform@*"
-      - "router@*"
-      - "vite-plugin-angular@*"
+      - 'astro-angular@*'
+      - 'content@*'
+      - 'create-analog@*'
+      - 'platform@*'
+      - 'router@*'
+      - 'vite-plugin-angular@*'
       # new package here
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-
       # We want to get the tag name without the @version suffix, this is our
       # package name i.e. astro-angular@0.0.1 -> astro-angular, this based on
       # the trigger tags above.
@@ -47,8 +46,8 @@ jobs:
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "dist/packages/${{ steps.get-tag-name.outputs.result }}/*.*"
-          bodyFile: "packages/${{ steps.get-tag-name.outputs.result }}/CHANGELOG.md"
+          artifacts: 'dist/packages/${{ steps.get-tag-name.outputs.result }}/*.*'
+          bodyFile: 'packages/${{ steps.get-tag-name.outputs.result }}/CHANGELOG.md'
 
       - name: npm publish
         run: npm publish dist/packages/${{ steps.get-tag-name.outputs.result }} --access public
