--- a/apps/analog-app/tsconfig.spec.json
+++ b/apps/analog-app/tsconfig.spec.json
@@ -4,12 +4,6 @@
     "outDir": "../../dist/out-tsc",
     "types": ["node", "vitest/globals"]
   },
-  "files": [
-    "src/test-setup.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.spec.ts",
-    "**/*.d.ts"
-  ]
+  "files": ["src/test-setup.ts", "src/polyfills.ts"],
+  "include": ["src/**/*.spec.ts", "**/*.d.ts"]
 }
