--- a/apps/analog-app/tsconfig.app.json
+++ b/apps/analog-app/tsconfig.app.json
@@ -7,6 +7,6 @@
     "useDefineForClassFields": false
   },
   "files": ["src/main.ts", "src/main.server.ts"],
-  "include": ["src/**/*.d.ts", "src/app/routes/**/*.ts"],
+  "include": ["src/**/*.d.ts", "src/app/pages/**/*.page.ts"],
   "exclude": ["**/*.test.ts", "**/*.spec.ts"]
 }
