chore: add e2e to depend on build

--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,9 @@
     "test": {
       "dependsOn": ["^build"]
     },
+    "e2e": {
+      "dependsOn": ["^build"]
+    },
     "serve": {
       "dependsOn": ["^build"]
     },
