fix(vite-plugin-angular): add import fixes and support for Angular v16.1

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preinstall": "npx only-allow pnpm",
     "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
-    "build": "nx run-many --target build --all",
+    "build": "nx run-many --target build --all --parallel=1 --exclude=trpc-app",
     "e2e": "nx run-many --target e2e --all --parallel=1 --exclude analog-app-e2e-playwright",
     "test": "nx run-many --target test --all",
     "build:vite-ci": "nx run-many --target build --all",
@@ -45,15 +45,15 @@
   ],
   "dependencies": {
     "@analogjs/content": "latest",
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/platform-server": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "^16.1.0",
+    "@angular/common": "^16.1.0",
+    "@angular/compiler": "^16.1.0",
+    "@angular/core": "^16.1.0",
+    "@angular/forms": "^16.1.0",
+    "@angular/platform-browser": "^16.1.0",
+    "@angular/platform-browser-dynamic": "^16.1.0",
+    "@angular/platform-server": "^16.1.0",
+    "@angular/router": "^16.1.0",
     "@astrojs/react": "^2.0.2",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "1.6.22",
@@ -83,19 +83,19 @@
     "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular-devkit/core": "^16.0.0",
-    "@angular-devkit/schematics": "^16.0.0",
+    "@angular-devkit/build-angular": "^16.1.0",
+    "@angular-devkit/core": "^16.1.0",
+    "@angular-devkit/schematics": "^16.1.0",
     "@angular-eslint/eslint-plugin": "16.0.1",
     "@angular-eslint/eslint-plugin-template": "16.0.1",
     "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
+    "@angular/cli": "^16.1.0",
+    "@angular/compiler-cli": "^16.1.0",
+    "@angular/language-service": "^16.1.0",
     "@astrojs/markdown-component": "^1.0.2",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "@ngtools/webpack": "^16.0.0",
+    "@ngtools/webpack": "^16.1.0",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@nx/cypress": "16.1.0",
     "@nx/eslint-plugin": "16.1.0",
@@ -103,7 +103,7 @@
     "@nx/plugin": "16.1.0",
     "@nx/vite": "16.1.0",
     "@nx/web": "16.1.0",
-    "@schematics/angular": "^16.0.0",
+    "@schematics/angular": "^16.1.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
     "@swc/core": "^1.2.173",
@@ -125,14 +125,14 @@
     "eslint-plugin-cypress": "^2.12.1",
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
-    "jest": "29.4.3",
-    "jest-environment-jsdom": "29.4.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^21.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^16.0.0",
+    "ng-packagr": "^16.1.0",
     "nitropack": "^2.0.0",
     "nx": "16.1.0",
     "nx-cloud": "^16.0.5",
