--- a/apps/nx-plugin-e2e/project.json
+++ b/apps/nx-plugin-e2e/project.json
@@ -4,6 +4,12 @@
   "projectType": "application",
   "sourceRoot": "apps/nx-plugin-e2e/src",
   "targets": {
+    "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "nx build platform && nx build trpc && nx build content"
+      }
+    },
     "e2e": {
       "executor": "@nx/plugin:e2e",
       "options": {
@@ -11,9 +17,9 @@
         "jestConfig": "apps/nx-plugin-e2e/jest.config.ts",
         "coverageDirectory": "../../coverage/apps/nx-plugin-e2e",
         "passWithNoTests": true
-      }
+      },
+      "dependsOn": ["build"]
     }
   },
-  "tags": [],
-  "implicitDependencies": ["platform"]
+  "tags": []
 }
