--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -21,8 +21,8 @@
   "peerDependencies": {
     "@angular/common": "^16.0.0",
     "@angular/core": "^16.0.0",
-    "@trpc/client": "10.25.0",
-    "@trpc/server": "10.25.0",
+    "@trpc/client": "^10.25.0",
+    "@trpc/server": "^10.25.0",
     "isomorphic-fetch": "^3.0.0",
     "superjson": "^1.12.3"
   },
