--- a/apps/nx-plugin-e2e/project.json
+++ b/apps/nx-plugin-e2e/project.json
@@ -4,22 +4,10 @@
   "projectType": "application",
   "sourceRoot": "apps/nx-plugin-e2e/src",
   "targets": {
-    "build": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "nx build platform && nx build trpc && nx build content"
-      }
-    },
     "e2e": {
-      "executor": "@nx/plugin:e2e",
-      "options": {
-        "target": "platform:build",
-        "jestConfig": "apps/nx-plugin-e2e/jest.config.ts",
-        "coverageDirectory": "../../coverage/apps/nx-plugin-e2e",
-        "passWithNoTests": true
-      },
-      "dependsOn": ["build"]
+      "executor": "@nx/vite:test"
     }
   },
-  "tags": []
+  "tags": [],
+  "implicitDependencies": ["platform", "trpc", "content"]
 }
