--- a/apps/nx-plugin-e2e/project.json
+++ b/apps/nx-plugin-e2e/project.json
@@ -5,15 +5,9 @@
   "sourceRoot": "apps/nx-plugin-e2e/src",
   "targets": {
     "e2e": {
-      "executor": "@nx/plugin:e2e",
-      "options": {
-        "target": "platform:build",
-        "jestConfig": "apps/nx-plugin-e2e/jest.config.ts",
-        "coverageDirectory": "../../coverage/apps/nx-plugin-e2e",
-        "passWithNoTests": true
-      }
+      "executor": "@nx/vite:test"
     }
   },
   "tags": [],
-  "implicitDependencies": ["platform"]
+  "implicitDependencies": ["platform", "trpc", "content"]
 }
