--- a/packages/create-analog/template-angular-v16/tsconfig.json
+++ b/packages/create-analog/template-angular-v16/tsconfig.json
@@ -19,7 +19,8 @@
     "target": "ES2022",
     "module": "ES2022",
     "lib": ["ES2022", "dom"],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
