--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "nx run-many --target build --all --parallel=1 --exclude=trpc-app",
     "e2e": "nx run-many --target e2e --all --parallel=1 --exclude analog-app-e2e-playwright,trpc-app-e2e-playwright",
     "test": "nx run-many --target test --all",
-    "build:vite-ci": "nx run-many --target build --all",
+    "build:vite-ci": "npm run build",
     "test:vite-ci": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "contributors:add": "all-contributors add",
