--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "@astrojs/react": "^2.0.2",
     "@babel/core": "^7.21.8",
     "@mdx-js/react": "1.6.22",
-    "@nx/angular": "16.1.0",
-    "@nx/devkit": "^16.2.1",
+    "@nx/angular": "16.4.0",
+    "@nx/devkit": "16.4.0",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
     "@types/babel__core": "^7.20.0",
@@ -88,7 +88,7 @@
     "@angular-eslint/eslint-plugin": "16.0.1",
     "@angular-eslint/eslint-plugin-template": "16.0.1",
     "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "^16.1.0",
+    "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@angular/language-service": "^16.1.0",
     "@astrojs/markdown-component": "^1.0.2",
@@ -96,12 +96,12 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@ngtools/webpack": "^16.1.0",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
-    "@nx/cypress": "16.1.0",
-    "@nx/eslint-plugin": "16.1.0",
-    "@nx/jest": "16.1.0",
-    "@nx/plugin": "16.1.0",
-    "@nx/vite": "16.1.0",
-    "@nx/web": "16.1.0",
+    "@nx/cypress": "16.4.0",
+    "@nx/eslint-plugin": "16.4.0",
+    "@nx/jest": "16.4.0",
+    "@nx/plugin": "16.4.0",
+    "@nx/vite": "16.4.0",
+    "@nx/web": "16.4.0",
     "@schematics/angular": "^16.1.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "0.1.62",
@@ -126,15 +126,15 @@
     "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jsdom": "^21.1.0",
+    "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "kolorist": "^1.6.0",
     "lint-staged": "^13.1.0",
     "minimist": "^1.2.7",
     "ng-packagr": "^16.1.0",
     "nitropack": "^2.0.0",
-    "nx": "16.1.0",
-    "nx-cloud": "^16.0.5",
+    "nx": "16.4.0",
+    "nx-cloud": "16.0.5",
     "playwright": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
@@ -149,10 +149,10 @@
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.3",
-    "vite": "4.3.4",
+    "vite": "4.3.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.31.0",
+    "vitest": "0.32.2",
     "webpack-bundle-analyzer": "^4.7.0"
   }
 }
