--- a/packages/create-analog/project.json
+++ b/packages/create-analog/project.json
@@ -6,9 +6,8 @@
   "targets": {
     "build": {
       "executor": "nx:run-commands",
-      "outputs": ["{options.outputPath}"],
+      "outputs": ["{workspaceRoot}/dist/packages/create-analog"],
       "options": {
-        "outputPath": "dist/packages/create-analog",
         "command": "cpy packages/create-analog/* !packages/create-analog/node_modules/ !packages/create-analog/project.json !packages/create-analog/__tests__/ !packages/create-analog/yarn.lock dist/"
       }
     },
