--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "h3": "^1.6.6",
     "isomorphic-fetch": "^3.0.0",
     "marked": "^5.0.2",
+    "marked-gfm-heading-id": "^3.0.4",
+    "marked-highlight": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "rxjs": "7.8.0",
