--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^15.0.0 || ^16.0.0",
     "rxjs": "^6.5.0 || ^7.5.0",
     "marked": "^5.0.2",
+    "marked-gfm-heading-id": "^3.0.4",
+    "marked-highlight": "^2.0.1",
     "prismjs": "^1.29.0",
     "front-matter": "^4.0.2"
   },
