--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -42,6 +42,6 @@
       "@analogjs/vite-plugin-angular",
       "@analogjs/vite-plugin-nitro"
     ],
-    "migrations": "./migrations.json"
+    "migrations": "./migrations/migrations.json"
   }
 }
