--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/content",
-  "version": "0.2.0-beta.20",
+  "version": "0.2.0-beta.21",
   "description": "Content Rendering for Analog",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
   "keywords": [
@@ -42,6 +42,6 @@
       "@analogjs/vite-plugin-angular",
       "@analogjs/vite-plugin-nitro"
     ],
-    "migrations": "./migrations/migrations.json"
+    "migrations": "./migrations/migration.json"
   }
 }
