feat(vite-plugin-nitro): add initial support for sitemap generation (#497)
Co-authored-by: Q <q.ray@jbhunt.com>

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -27,7 +27,8 @@
     "nitropack": "^2.0.0",
     "@analogjs/vite-plugin-angular": "^0.2.0-beta.22",
     "@analogjs/vite-plugin-nitro": "^0.2.0-beta.22",
-    "@nx/devkit": "^16.0.0"
+    "@nx/devkit": "^16.0.0",
+    "xmlbuilder2": "^3.0.2"
   },
   "generators": "./src/lib/nx-plugin/generators.json",
   "schematics": "./src/lib/nx-plugin/generators.json",
