--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -8,7 +8,7 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:ng-packagr",
-      "outputs": ["node_modules/@analogjs/content"],
+      "outputs": ["{workspaceRoot}/node_modules/@analogjs/content"],
       "options": {
         "project": "packages/content/ng-package.json"
       },
