Revert "chore: update outputs to include workspaceRoot"
This reverts commit 37ff112a949a60cf6b20f5e81cb196a3fbe19b07.

--- a/packages/content/project.json
+++ b/packages/content/project.json
@@ -8,7 +8,7 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:ng-packagr",
-      "outputs": ["{workspaceRoot}/node_modules/@analogjs/content"],
+      "outputs": ["node_modules/@analogjs/content"],
       "options": {
         "project": "packages/content/ng-package.json"
       },
