--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -6,7 +6,7 @@
   "targets": {
     "build-package": {
       "executor": "@nx/js:tsc",
-      "outputs": ["{workspaceRoot}{options.outputPath}"],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "node_modules/@analogjs/platform",
         "main": "packages/platform/src/index.ts",
