--- a/packages/astro-angular/project.json
+++ b/packages/astro-angular/project.json
@@ -6,7 +6,7 @@
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": ["{workspaceRoot}/{options.outputPath}"],
       "options": {
         "outputPath": "node_modules/@analogjs/astro-angular",
         "main": "packages/astro-angular/src/index.ts",
