--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@nx/cypress": "16.4.0",
     "@nx/eslint-plugin": "16.4.0",
     "@nx/jest": "16.4.0",
+    "@nx/linter": "16.4.0",
     "@nx/plugin": "16.4.0",
     "@nx/vite": "16.4.0",
     "@nx/web": "16.4.0",
