build: update Nx to 16.5.1, zone.js to 0.13.1

--- a/nx.json
+++ b/nx.json
@@ -65,7 +65,11 @@
   "namedInputs": {
     "default": ["{projectRoot}/**/*", "sharedGlobals", "projectSpecificFiles"],
     "sharedGlobals": [],
-    "production": ["default", "!{projectRoot}/.eslintrc.json"],
+    "production": [
+      "default",
+      "!{projectRoot}/.eslintrc.json",
+      "!{projectRoot}/src/test-setup.[jt]s"
+    ],
     "projectSpecificFiles": []
   }
 }
