--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "hook:commit-msg": "npx --no -- commitlint --edit",
+    "hook:commit-msg": "npx --no -- commitlint --edit $1",
     "hook:pre-commit": "lint-staged",
     "prettify": "prettier --write ."
   },
