--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.0.4",
     "marked-highlight": "^2.0.1",
+    "mermaid": "^10.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "rxjs": "7.8.0",
