--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analogjs-platform",
-  "version": "0.2.0-beta.28",
+  "version": "0.2.0-rc.0",
   "license": "MIT",
   "scripts": {
     "dev": "nx serve",
