--- a/packages/create-analog/template-angular-v16/package.json
+++ b/packages/create-analog/template-angular-v16/package.json
@@ -14,18 +14,18 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@analogjs/content": "^0.2.0-rc.5",
-    "@analogjs/router": "^0.2.0-rc.5",
-    "@angular/animations": "^16.1.0",
-    "@angular/common": "^16.1.0",
-    "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.1.0",
-    "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/platform-server": "^16.1.0",
-    "@angular/router": "^16.1.0",
-    "@nx/angular": "^16.4.0",
+    "@analogjs/content": "^0.2.0",
+    "@analogjs/router": "^0.2.0",
+    "@angular/animations": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/platform-server": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "@nx/angular": "^16.7.0",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.0.4",
@@ -37,12 +37,12 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^0.2.0-rc.5",
-    "@angular-devkit/build-angular": "^16.1.0",
-    "@angular/cli": "^16.1.0",
-    "@angular/compiler-cli": "^16.1.0",
-    "@nx/vite": "^16.4.0",
-    "nx": "^16.4.0",
+    "@analogjs/platform": "^0.2.0",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.0",
+    "@nx/vite": "^16.7.0",
+    "nx": "^16.7.0",
     "jsdom": "^22.1.0",
     "typescript": "~5.0.2",
     "vite": "^4.4.8",
